# stBridge

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/stbridge/: __init__.py  cli.py
tests/: __init__.py  test_stbridge.py
