[tool.poetry]
name = "stbridge"
version = "0.1.0"
description = ""
authors = ["Xishansnow <xishansnow@gmail.com>"]
readme = "README.md"
packages = [{include = "stbridge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
